WIP:debugging ft extraction of traces

--- a/updrsTapping_exploring_features.ipynb
+++ b/updrsTapping_exploring_features.ipynb
@@ -133,50 +133,334 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tapscore 2\n",
-      "# 15 tap found\n",
-      "('BER052', 'M0S0', 'L', 2)  features extracted\n",
-      "\n",
-      "tapscore 2\n",
-      "# 23 tap found\n",
-      "('BER052', 'M0S0', 'L', 2)  features extracted\n",
-      "\n",
-      "tapscore 2\n",
-      "# 16 tap found\n",
-      "('BER052', 'M0S0', 'L', 2)  features extracted\n",
-      "\n",
-      "tapscore 1\n",
-      "# 8 tap found\n",
-      "('BER052', 'M0S0', 'R', 1)  features extracted\n",
-      "\n",
-      "4\n",
-      "('M0S0', 'R')\n",
-      "['BER052_M0S0_R_block2_250Hz.csv', 'BER052_M0S0_R_block4_250Hz.csv', 'BER052_M0S0_L_block3_250Hz.csv', 'BER052_M0S0_L_block2_250Hz.csv', 'BER052_M0S0_L_block1_250Hz.csv', 'BER052_M0S0_R_block3_250Hz.csv', 'BER052_M0S0_R_block1_250Hz.csv']\n"
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "rep is 4",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\Users\\habetsj\\Research\\projects\\tapping\\code\\updrsTapping_repo\\retap_utils\\utils_featureExtraction.py:112\u001b[0m, in \u001b[0;36mFeatureSet.__post_init__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    111\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m--> 112\u001b[0m     tap_score \u001b[39m=\u001b[39m \u001b[39mint\u001b[39;49m(combolog[\n\u001b[0;32m    113\u001b[0m         combolog[\u001b[39m'\u001b[39;49m\u001b[39mrepetition\u001b[39;49m\u001b[39m'\u001b[39;49m] \u001b[39m==\u001b[39;49m rep\n\u001b[0;32m    114\u001b[0m     ][\u001b[39m'\u001b[39;49m\u001b[39mupdrsFt\u001b[39;49m\u001b[39m'\u001b[39;49m])\n\u001b[0;32m    115\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mtapscore\u001b[39m\u001b[39m'\u001b[39m, tap_score)\n",
-      "File \u001b[1;32mc:\\Users\\habetsj\\Anaconda3\\envs\\retap\\lib\\site-packages\\pandas\\core\\series.py:191\u001b[0m, in \u001b[0;36m_coerce_method.<locals>.wrapper\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    190\u001b[0m     \u001b[39mreturn\u001b[39;00m converter(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39miloc[\u001b[39m0\u001b[39m])\n\u001b[1;32m--> 191\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mcannot convert the series to \u001b[39m\u001b[39m{\u001b[39;00mconverter\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: cannot convert the series to <class 'int'>",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\habetsj\\Research\\projects\\tapping\\code\\updrsTapping_repo\\updrsTapping_exploring_features.ipynb Zelle 7\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/habetsj/Research/projects/tapping/code/updrsTapping_repo/updrsTapping_exploring_features.ipynb#X12sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m importlib\u001b[39m.\u001b[39mreload(utils_ftExtr)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/habetsj/Research/projects/tapping/code/updrsTapping_repo/updrsTapping_exploring_features.ipynb#X12sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m importlib\u001b[39m.\u001b[39mreload(tap_run)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/habetsj/Research/projects/tapping/code/updrsTapping_repo/updrsTapping_exploring_features.ipynb#X12sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m data \u001b[39m=\u001b[39m utils_ftExtr\u001b[39m.\u001b[39;49mFeatureSet(\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/habetsj/Research/projects/tapping/code/updrsTapping_repo/updrsTapping_exploring_features.ipynb#X12sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39m# subs_incl = ['BER055', 'BER054'],\u001b[39;49;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/habetsj/Research/projects/tapping/code/updrsTapping_repo/updrsTapping_exploring_features.ipynb#X12sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     centers_incl \u001b[39m=\u001b[39;49m [\u001b[39m'\u001b[39;49m\u001b[39mBER\u001b[39;49m\u001b[39m'\u001b[39;49m,  \u001b[39m'\u001b[39;49m\u001b[39mDUS\u001b[39;49m\u001b[39m'\u001b[39;49m]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/habetsj/Research/projects/tapping/code/updrsTapping_repo/updrsTapping_exploring_features.ipynb#X12sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m )\n",
-      "File \u001b[1;32m<string>:9\u001b[0m, in \u001b[0;36m__init__\u001b[1;34m(self, subs_incl, centers_incl, states, sides, incl_meta_data, verbose)\u001b[0m\n",
-      "File \u001b[1;32mc:\\Users\\habetsj\\Research\\projects\\tapping\\code\\updrsTapping_repo\\retap_utils\\utils_featureExtraction.py:125\u001b[0m, in \u001b[0;36mFeatureSet.__post_init__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    123\u001b[0m         \u001b[39mprint\u001b[39m(combo)\n\u001b[0;32m    124\u001b[0m         \u001b[39mprint\u001b[39m(combo_files)\n\u001b[1;32m--> 125\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mrep is \u001b[39m\u001b[39m{\u001b[39;00mrep\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[0;32m    126\u001b[0m         \u001b[39mcontinue\u001b[39;00m\n\u001b[0;32m    127\u001b[0m \u001b[39melse\u001b[39;00m:\n",
-      "\u001b[1;31mTypeError\u001b[0m: rep is 4"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\habetsj\\Research\\projects\\tapping\\code\\updrsTapping_repo\\tap_extract_fts\\tapping_featureset.py:258: RuntimeWarning: Mean of empty slice\n",
+      "  endMean = np.nanmean(ft[-sel_n:])\n",
+      "c:\\Users\\habetsj\\Research\\projects\\tapping\\code\\updrsTapping_repo\\tap_extract_fts\\tapping_featureset.py:258: RuntimeWarning: Mean of empty slice\n",
+      "  endMean = np.nanmean(ft[-sel_n:])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\habetsj\\Research\\projects\\tapping\\code\\updrsTapping_repo\\tap_extract_fts\\tapping_featureset.py:258: RuntimeWarning: Mean of empty slice\n",
+      "  endMean = np.nanmean(ft[-sel_n:])\n",
+      "c:\\Users\\habetsj\\Research\\projects\\tapping\\code\\updrsTapping_repo\\tap_extract_fts\\tapping_featureset.py:258: RuntimeWarning: Mean of empty slice\n",
+      "  endMean = np.nanmean(ft[-sel_n:])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "impacts set\n",
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\habetsj\\Anaconda3\\envs\\retap\\lib\\site-packages\\scipy\\stats\\_stats_py.py:110: RuntimeWarning: The input array could not be properly checked for nan values. nan values will be ignored.\n",
+      "  warnings.warn(\"The input array could not be properly \"\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\habetsj\\Anaconda3\\envs\\retap\\lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3398, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"C:\\Users\\habetsj\\AppData\\Local\\Temp\\ipykernel_18144\\48698700.py\", line 4, in <cell line: 4>\n",
+      "    data = utils_ftExtr.FeatureSet(\n",
+      "  File \"<string>\", line 9, in __init__\n",
+      "  File \"c:\\Users\\habetsj\\Research\\projects\\tapping\\code\\updrsTapping_repo\\retap_utils\\utils_featureExtraction.py\", line 138, in __post_init__\n",
+      "    singleTrace(\n",
+      "  File \"<string>\", line 11, in __init__\n",
+      "  File \"c:\\Users\\habetsj\\Research\\projects\\tapping\\code\\updrsTapping_repo\\retap_utils\\utils_featureExtraction.py\", line 186, in __post_init__\n",
+      "    tap_idx, impact_idx, _ = tap_finder.run_updrs_tap_finder(\n",
+      "  File \"c:\\Users\\habetsj\\Research\\projects\\tapping\\code\\updrsTapping_repo\\tapping_run.py\", line 66, in run_updrs_tap_finder\n",
+      "    main_ax_i = find_main_axis(acc_arr, method='variance')\n",
+      "  File \"c:\\Users\\habetsj\\Research\\projects\\tapping\\code\\updrsTapping_repo\\tap_load_data\\tapping_preprocess.py\", line 73, in find_main_axis\n",
+      "    var = [\n",
+      "  File \"c:\\Users\\habetsj\\Research\\projects\\tapping\\code\\updrsTapping_repo\\tap_load_data\\tapping_preprocess.py\", line 74, in <listcomp>\n",
+      "    variation(dat_arr[i, :]) for i in range(\n",
+      "  File \"c:\\Users\\habetsj\\Anaconda3\\envs\\retap\\lib\\site-packages\\scipy\\stats\\_variation.py\", line 203, in variation\n",
+      "    mean_a = a.mean(axis, keepdims=True)\n",
+      "  File \"c:\\Users\\habetsj\\Anaconda3\\envs\\retap\\lib\\site-packages\\numpy\\core\\_methods.py\", line 182, in _mean\n",
+      "    ret = um.true_divide(\n",
+      "TypeError: unsupported operand type(s) for /: 'str' and 'int'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\habetsj\\Anaconda3\\envs\\retap\\lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 1993, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(\n",
+      "  File \"c:\\Users\\habetsj\\Anaconda3\\envs\\retap\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1118, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "  File \"c:\\Users\\habetsj\\Anaconda3\\envs\\retap\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1012, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "  File \"c:\\Users\\habetsj\\Anaconda3\\envs\\retap\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 865, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "  File \"c:\\Users\\habetsj\\Anaconda3\\envs\\retap\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 818, in format_exception_as_a_whole\n",
+      "    frames.append(self.format_record(r))\n",
+      "  File \"c:\\Users\\habetsj\\Anaconda3\\envs\\retap\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 736, in format_record\n",
+      "    result += ''.join(_format_traceback_lines(frame_info.lines, Colors, self.has_colors, lvals))\n",
+      "  File \"c:\\Users\\habetsj\\Anaconda3\\envs\\retap\\lib\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"c:\\Users\\habetsj\\Anaconda3\\envs\\retap\\lib\\site-packages\\stack_data\\core.py\", line 698, in lines\n",
+      "    pieces = self.included_pieces\n",
+      "  File \"c:\\Users\\habetsj\\Anaconda3\\envs\\retap\\lib\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"c:\\Users\\habetsj\\Anaconda3\\envs\\retap\\lib\\site-packages\\stack_data\\core.py\", line 649, in included_pieces\n",
+      "    pos = scope_pieces.index(self.executing_piece)\n",
+      "  File \"c:\\Users\\habetsj\\Anaconda3\\envs\\retap\\lib\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"c:\\Users\\habetsj\\Anaconda3\\envs\\retap\\lib\\site-packages\\stack_data\\core.py\", line 628, in executing_piece\n",
+      "    return only(\n",
+      "  File \"c:\\Users\\habetsj\\Anaconda3\\envs\\retap\\lib\\site-packages\\executing\\executing.py\", line 164, in only\n",
+      "    raise NotOneValueFound('Expected one value, found 0')\n",
+      "executing.executing.NotOneValueFound: Expected one value, found 0\n"
      ]
     }
    ],
@@ -192,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -200,33 +484,34 @@
      "output_type": "stream",
      "text": [
       "382\n",
-      "dict_keys(['sub', 'state', 'side', 'rep', 'center', 'filepath', 'tap_score', 'acc_sig', 'fs'])\n"
+      "dict_keys(['sub', 'state', 'side', 'rep', 'center', 'filepath', 'tap_score', 'to_extract_feats', 'acc_sig', 'fs'])\n"
      ]
     }
    ],
    "source": [
     "print(len(vars(data).keys()))\n",
-    "print(vars(data.BER052_M0S0_R_3).keys())"
+    "print(vars(data.BER052_M0S0_R_1).keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "250"
-      ]
-     },
-     "execution_count": 158,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'singleTrace' object has no attribute 'impact_idx'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\habetsj\\Research\\projects\\tapping\\code\\updrsTapping_repo\\updrsTapping_exploring_features.ipynb Zelle 9\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/habetsj/Research/projects/tapping/code/updrsTapping_repo/updrsTapping_exploring_features.ipynb#X54sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m data\u001b[39m.\u001b[39;49mBER052_M0S0_R_3\u001b[39m.\u001b[39;49mimpact_idx\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'singleTrace' object has no attribute 'impact_idx'"
+     ]
     }
    ],
    "source": [
-    "data.BER052_M0S0_R_3.fs"
+    "data.BER052_M0S0_R_3.impact_idx"
    ]
   },
   {
