FIX: function runs to store boxplots, ft optimisation has to be done

--- a/updrsTapping_exploring_features.ipynb
+++ b/updrsTapping_exploring_features.ipynb
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 412,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,42 +178,24 @@
     "importlib.reload(utils_dataManagement)\n",
     "\n",
     "deriv_path = os.path.join(utils_dataManagement.get_local_proj_dir(), 'data', 'derivatives')\n",
-    "berClass = utils_dataManagement.load_class_pickle(os.path.join(deriv_path, 'ftClass_BER.P'))\n",
-    "dusClass = utils_dataManagement.load_class_pickle(os.path.join(deriv_path, 'ftClass_DUS.P'))"
+    "# berClass = utils_dataManagement.load_class_pickle(os.path.join(deriv_path, 'ftClass_BER.P'))\n",
+    "# dusClass = utils_dataManagement.load_class_pickle(os.path.join(deriv_path, 'ftClass_DUS.P'))\n",
+    "\n",
+    "ftClass = utils_dataManagement.load_class_pickle(os.path.join(deriv_path, 'ftClass_ALL.P'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 427,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "311 65\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\n",
-    "    len(berClass.incl_traces),\n",
-    "    len(dusClass.incl_traces)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 169,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of single traces included: 20\n",
+      "Number of single traces included: 384\n",
       "\n",
-      "Keys per trace:  dict_keys(['sub', 'state', 'side', 'rep', 'center', 'filepath', 'tap_score', 'to_extract_feats', 'acc_sig', 'fs', 'impact_idx', 'fts'])\n",
+      "Keys per trace:  dict_keys(['sub', 'state', 'side', 'rep', 'center', 'filepath', 'tap_score', 'goal_Fs', 'to_extract_feats', 'acc_sig', 'fs', 'impact_idx', 'fts'])\n",
       "\n",
       "FEATURES INCLUDED:\n",
       " dict_keys(['triax_arr', 'fs', 'impacts', 'tapDict', 'updrsSubScore', 'nTaps', 'freq', 'tap_durations', 'freq2', 'runRMS_ax', 'runRMS_svm', 'tapRMS_ax', 'tapRMS_svm', 'tapRMSnrm_ax', 'tapRMSnrm_svm', 'upVelo_ax', 'upVelo_svm', 'impactRMS_ax', 'impactRMS_svm', 'intraTapInt', 'dirChange_run', 'dirChange_taps', 'ampDecrement'])\n"
@@ -222,133 +204,75 @@
    ],
    "source": [
     "\n",
-    "print('Number of single traces included:', len(vars(loaddata).keys()))\n",
-    "print('\\nKeys per trace: ', vars(loaddata.BER055_M0S0_L_2).keys())\n",
-    "print('\\nFEATURES INCLUDED:\\n', vars(loaddata.BER055_M0S0_L_2.fts).keys())"
+    "print('Number of single traces included:', len(vars(ftClass).keys()))\n",
+    "print('\\nKeys per trace: ', vars(ftClass.BER055_M0S0_L_2).keys())\n",
+    "print('\\nFEATURES INCLUDED:\\n', vars(ftClass.BER055_M0S0_L_2.fts).keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 425,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# missing tap-start-indices: 644 (6.1 %)\n"
+     ]
+    }
+   ],
+   "source": [
+    "## CHECK NUMBER OF SPECIFIC MISSING POINTS IN TAP-LISTS\n",
+    "count = 0\n",
+    "tcount = 0\n",
+    "# for cen in [dusClass, berClass]:\n",
+    "cen = ftClass\n",
+    "for trace in cen.incl_traces:\n",
+    "\n",
+    "    tapDict = getattr(cen, trace).fts.tapDict\n",
+    "\n",
+    "    for tap in tapDict:\n",
+    "\n",
+    "        tcount += 1\n",
+    "        \n",
+    "        # if np.isnan(tap[-2]) or np.isnan(tap[-1]):\n",
+    "        if np.isnan(tap[0]):\n",
+    "\n",
+    "            # print(trace, tap)\n",
+    "            count += 1\n",
+    "\n",
+    "print(\n",
+    "    f'# missing tap-start-indices: {count}'\n",
+    "    f' ({round(count / tcount * 100, 1)} %)'\n",
+    ")\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2a. Visualise of detected Taps"
+    "### 2a. Visualise detected Taps"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['DUS024_M0S0_L_1', 'DUS024_M0S1_L_1', 'DUS024_M1S0_L_1', 'DUS024_M1S1_L_1']"
-      ]
-     },
-     "execution_count": 189,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 242,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 247,  322,  400,  467,  538,  654,  721,  786,  853,  919,  991,\n",
-       "       1050, 1117, 1190, 1257, 1334, 1420, 1506, 1605, 1676, 1742, 1812,\n",
-       "       1928, 2000, 2056, 2177, 2241, 2295, 2350, 2417, 2554], dtype=int64)"
-      ]
-     },
-     "execution_count": 242,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "berdata.BER052_M0S0_L_1.fts.impacts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 351,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3, 2666)"
-      ]
-     },
-     "execution_count": 351,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "accsig.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 371,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_detected_taps(\n",
-    "    ftClass,\n",
-    ")\n",
-    "\n",
-    "savepath = os.path.join(\n",
-    "    utils_dataManagement.get_local_proj_dir(),\n",
-    "    'figures',\n",
-    "    'tap_find_check',\n",
-    ")\n",
-    "\n",
-    "\n",
-    "for trace in berClass.incl_traces[:5]:\n",
-    "\n",
-    "    testrun = getattr(berClass, trace)\n",
-    "\n",
-    "\n",
-    "    accsig = testrun.acc_sig\n",
-    "    taps = [t[0] for t in testrun.fts.tapDict]\n",
-    "\n",
-    "    # print(f' of seconds {accsig.shape[1] / 250}')\n",
-    "\n",
-    "    # svm = tap_fts_set.signalvectormagn(accsig)\n",
-    "    # mainax = tap_preproc.find_main_axis(accsig, method='minmax')\n",
-    "    # print(f'axis main: {mainax}')\n",
-    "    impacts = tap_impact.find_impacts(accsig[mainax], 250)\n",
-    "    svmimpacts = tap_impact.find_impacts(svm, 250)\n",
-    "\n",
-    "    x_samples = np.arange(accsig.shape[1])\n",
-    "    plt.plot(accsig.T, alpha=.3, label=['x', 'y', 'z'])\n",
-    "    # plt.plot(svm, alpha=.4)\n",
-    "\n",
-    "    # plt.scatter(impacts, [4] * len(impacts))\n",
-    "    # plt.scatter(svmimpacts, [3.5] * len(svmimpacts))\n",
-    "    plt.scatter(taps, [3] * len(taps), label='tap-starts')\n",
-    "\n",
-    "    plt.ylabel('Acceleration (g)')\n",
-    "    plt.xlabel('Time (s)')\n",
-    "\n",
-    "    plt.xticks(x_samples[::500], labels=x_samples[::500] / 250)\n",
-    "\n",
-    "    plt.legend(loc='lower center', ncol=4)\n",
-    "\n",
-    "    plt.title(trace)\n",
-    "\n",
-    "    plt.savefig(\n",
-    "        os.path.join(savepath, f'{trace}_tap_check'),\n",
-    "        dpi=150, facecolor='w',\n",
-    "    )\n",
-    "    plt.close()"
+    "import tap_plotting.retap_check_taps as plot_taps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 375,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### PLOT DETECTED TAPS\n",
+    "importlib.reload(plot_taps)\n",
+    "# plot_taps.plot_detected_taps(dusClass)"
    ]
   },
   {
@@ -370,9 +294,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 437,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 437,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ftClass.BER023_M1S0_R_3.fts.tapDict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 443,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(freq)\t0 taps available for BER023_M1S0_R_3\n",
+      "(freq)\t0 taps available for DUS022_M0S0_L_1\n",
+      "(freq)\t0 taps available for DUS006_M0S0_L_1\n",
+      "(intraTapInt)\t0 taps available for BER023_M1S0_R_3\n",
+      "(intraTapInt)\t0 taps available for DUS022_M0S0_L_1\n",
+      "(intraTapInt)\t0 taps available for DUS006_M0S0_L_1\n",
+      "artificial 0 added\n",
+      "(tapRMS_svm)\t0 taps available for BER023_M1S0_R_3\n",
+      "(tapRMS_svm)\t0 taps available for DUS022_M0S0_L_1\n",
+      "(tapRMS_svm)\t0 taps available for DUS006_M0S0_L_1\n",
+      "(ampDecrement)\t0 taps available for BER023_M1S0_R_3\n",
+      "(ampDecrement)\t0 taps available for DUS022_M0S0_L_1\n",
+      "(ampDecrement)\t0 taps available for DUS006_M0S0_L_1\n",
+      "(dirChange_run)\t0 taps available for BER023_M1S0_R_3\n",
+      "(dirChange_run)\t0 taps available for DUS022_M0S0_L_1\n",
+      "(dirChange_run)\t0 taps available for DUS006_M0S0_L_1\n"
+     ]
+    }
+   ],
    "source": [
     "importlib.reload(retapViz)\n",
     "\n",
@@ -384,10 +351,10 @@
     "    'ampDecrement',\n",
     "    'dirChange_run',\n",
     "]\n",
-    "merge_meth = 'mean'\n",
+    "merge_meth = 'coefVar'\n",
     "# for merge_meth in ['mean', 'sum', 'stddev', 'trend_slope']:\n",
     "tempScoreDict = retapViz.combineFeatsPerScore(\n",
-    "    ftClass=data, fts_include=fts_include,\n",
+    "    ftClass=ftClass, fts_include=fts_include,\n",
     "    merge_method=merge_meth,\n",
     ")\n",
     "retapViz.plot_boxplot_feats_per_subscore(\n",
