FIX: debugged nan handling in tap detection

--- a/updrsTapping_exploring_features.ipynb
+++ b/updrsTapping_exploring_features.ipynb
@@ -133,9 +133,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 455,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'tap_load_data.tapping_time_detect' from 'c:\\\\Users\\\\habetsj\\\\Research\\\\projects\\\\tapping\\\\code\\\\updrsTapping_repo\\\\tap_load_data\\\\tapping_time_detect.py'>"
+      ]
+     },
+     "execution_count": 455,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### CREATE DATA7FT CLASSES OVER NOTEBOOK\n",
     "\n",
@@ -145,8 +156,8 @@
     "# importlib.reload(tap_import)\n",
     "# importlib.reload(tap_preproc)\n",
     "# importlib.reload(find_blocks)\n",
-    "# importlib.reload(tap_impact)\n",
-    "# importlib.reload(tap_times)\n",
+    "importlib.reload(tap_impact)\n",
+    "importlib.reload(tap_times)\n",
     "\n",
     "\n",
     "\n",
@@ -159,7 +170,7 @@
     "# )\n",
     "\n",
     "# berdata = mainFtExtr.FeatureSet(\n",
-    "#     subs_incl = ['BER052',],# 'DUS007'],\n",
+    "#     subs_incl = ['BER056',],# 'DUS007'],\n",
     "#     centers_incl = [ 'BER', ],\n",
     "#     verbose=False,\n",
     "# )\n"
@@ -167,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 463,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +189,8 @@
     "importlib.reload(utils_dataManagement)\n",
     "\n",
     "deriv_path = os.path.join(utils_dataManagement.get_local_proj_dir(), 'data', 'derivatives')\n",
-    "# berClass = utils_dataManagement.load_class_pickle(os.path.join(deriv_path, 'ftClass_BER.P'))\n",
+    "\n",
+    "# berClass = utils_dataManagement.load_class_pickle(os.path.join(deriv_path, 'ftClass_bertest.P'))\n",
     "# dusClass = utils_dataManagement.load_class_pickle(os.path.join(deriv_path, 'ftClass_DUS.P'))\n",
     "\n",
     "ftClass = utils_dataManagement.load_class_pickle(os.path.join(deriv_path, 'ftClass_ALL.P'))"
@@ -186,66 +198,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 465,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of single traces included: 384\n",
-      "\n",
-      "Keys per trace:  dict_keys(['sub', 'state', 'side', 'rep', 'center', 'filepath', 'tap_score', 'goal_Fs', 'to_extract_feats', 'acc_sig', 'fs', 'impact_idx', 'fts'])\n",
-      "\n",
-      "FEATURES INCLUDED:\n",
-      " dict_keys(['triax_arr', 'fs', 'impacts', 'tapDict', 'updrsSubScore', 'nTaps', 'freq', 'tap_durations', 'freq2', 'runRMS_ax', 'runRMS_svm', 'tapRMS_ax', 'tapRMS_svm', 'tapRMSnrm_ax', 'tapRMSnrm_svm', 'upVelo_ax', 'upVelo_svm', 'impactRMS_ax', 'impactRMS_svm', 'intraTapInt', 'dirChange_run', 'dirChange_taps', 'ampDecrement'])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# ## CHECK NUMBER OF SPECIFIC MISSING POINTS IN TAP-LISTS\n",
+    "# count = 0\n",
+    "# tcount = 0\n",
+    "# # for cen in [dusClass, berClass]:\n",
+    "# cen = ftClass\n",
+    "# for trace in cen.incl_traces:\n",
     "\n",
-    "print('Number of single traces included:', len(vars(ftClass).keys()))\n",
-    "print('\\nKeys per trace: ', vars(ftClass.BER055_M0S0_L_2).keys())\n",
-    "print('\\nFEATURES INCLUDED:\\n', vars(ftClass.BER055_M0S0_L_2.fts).keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 425,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "# missing tap-start-indices: 644 (6.1 %)\n"
-     ]
-    }
-   ],
-   "source": [
-    "## CHECK NUMBER OF SPECIFIC MISSING POINTS IN TAP-LISTS\n",
-    "count = 0\n",
-    "tcount = 0\n",
-    "# for cen in [dusClass, berClass]:\n",
-    "cen = ftClass\n",
-    "for trace in cen.incl_traces:\n",
+    "#     tapDict = getattr(cen, trace).fts.tapDict\n",
     "\n",
-    "    tapDict = getattr(cen, trace).fts.tapDict\n",
+    "#     for tap in tapDict:\n",
     "\n",
-    "    for tap in tapDict:\n",
-    "\n",
-    "        tcount += 1\n",
+    "#         tcount += 1\n",
     "        \n",
-    "        # if np.isnan(tap[-2]) or np.isnan(tap[-1]):\n",
-    "        if np.isnan(tap[0]):\n",
+    "#         # if np.isnan(tap[-2]) or np.isnan(tap[-1]):\n",
+    "#         if np.isnan(tap[0]):\n",
     "\n",
-    "            # print(trace, tap)\n",
-    "            count += 1\n",
+    "#             # print(trace, tap)\n",
+    "#             count += 1\n",
     "\n",
-    "print(\n",
-    "    f'# missing tap-start-indices: {count}'\n",
-    "    f' ({round(count / tcount * 100, 1)} %)'\n",
-    ")\n"
+    "# print(\n",
+    "#     f'# missing tap-start-indices: {count}'\n",
+    "#     f' ({round(count / tcount * 100, 1)} %)'\n",
+    "# )\n",
+    "# print(tcount)\n"
    ]
   },
   {
@@ -266,13 +246,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 467,
    "metadata": {},
    "outputs": [],
    "source": [
     "### PLOT DETECTED TAPS\n",
     "importlib.reload(plot_taps)\n",
-    "# plot_taps.plot_detected_taps(dusClass)"
+    "plot_taps.plot_detected_taps(ftClass)"
    ]
   },
   {
@@ -294,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 462,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +283,7 @@
        "[]"
       ]
      },
-     "execution_count": 437,
+     "execution_count": 462,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 470,
    "metadata": {},
    "outputs": [
     {
@@ -327,10 +307,9 @@
       "(intraTapInt)\t0 taps available for BER023_M1S0_R_3\n",
       "(intraTapInt)\t0 taps available for DUS022_M0S0_L_1\n",
       "(intraTapInt)\t0 taps available for DUS006_M0S0_L_1\n",
-      "artificial 0 added\n",
-      "(tapRMS_svm)\t0 taps available for BER023_M1S0_R_3\n",
-      "(tapRMS_svm)\t0 taps available for DUS022_M0S0_L_1\n",
-      "(tapRMS_svm)\t0 taps available for DUS006_M0S0_L_1\n",
+      "(tapRMSnrm_svm)\t0 taps available for BER023_M1S0_R_3\n",
+      "(tapRMSnrm_svm)\t0 taps available for DUS022_M0S0_L_1\n",
+      "(tapRMSnrm_svm)\t0 taps available for DUS006_M0S0_L_1\n",
       "(ampDecrement)\t0 taps available for BER023_M1S0_R_3\n",
       "(ampDecrement)\t0 taps available for DUS022_M0S0_L_1\n",
       "(ampDecrement)\t0 taps available for DUS006_M0S0_L_1\n",
@@ -347,7 +326,7 @@
     "fts_include = [\n",
     "    'freq',\n",
     "    'intraTapInt',\n",
-    "    'tapRMS_svm',\n",
+    "    'tapRMSnrm_svm',\n",
     "    'ampDecrement',\n",
     "    'dirChange_run',\n",
     "]\n",
@@ -361,15 +340,14 @@
     "    fts_include=fts_include,\n",
     "    featDict=tempScoreDict,\n",
     "    merge_method=merge_meth,\n",
-    "    plot_title='ReTap BER and DUS',\n",
-    "    figsave_name=f'retap_ftstests_{merge_meth}',\n",
+    "    plot_title='ReTap DUS and BER',# and DUS',\n",
+    "    figsave_name=f'retap_fullCohort_{merge_meth}_v2',\n",
     "    figsave_dir=os.path.join(\n",
     "        utils_dataManagement.find_onedrive_path('figures'),\n",
     "        'fts_boxplots',\n",
     "    ),\n",
     "    show=False,\n",
-    ")\n",
-    "# print(tempScoreDict.keys())"
+    ")\n"
    ]
   },
   {
