FIX: first tap-index is always set

--- a/updrsTapping_finding_storing_blocks.ipynb
+++ b/updrsTapping_finding_storing_blocks.ipynb
@@ -189,9 +189,9 @@
     "\n",
     "uncut_path = utils_dataManagement.find_stored_data_path('uncut')\n",
     "print(uncut_path)\n",
-    "\n",
+    "#'BER019', 'BER019'\n",
     "data = run_blocks.rawAccData(\n",
-    "    sub='056',\n",
+    "    sub='019',\n",
     "    state='M1S0',  # 'MOnSOff'\n",
     "    joker_string='FTL',\n",
     "    uncut_path=uncut_path\n",
